css styling add photo specials

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
 <div id="wrapper">
-
+    <h1 class="name">Piccoli Morsi</h1>
     <div id="big-picture">
         <div id="hero">
                 <div class="current"><img src="assets/restaurantphotos/slider1.jpg" alt=""></div>
@@ -24,10 +24,8 @@
     <!-- <div id="api Panel - 3 boxes across for api stuf"> -->
         <div id="api-row">
             <div class="api-panel redAPI" id="news">
-
             </div>
             <div class="api-panel redAPI" id="special">
-                <h4 class="locationBoxH4">Today's Special</h4>
             </div>
             <div class="api-panel redAPI" id="map">
                 <h4 class="locationBoxH4">Our Location</h4>
@@ -61,10 +59,11 @@
     <!-- content in the tab menus -->
             <section id="tab1" class="tab-content active">
                 <div>
-                    <p>Founded in 2012, Piccoli Morsi is the creation of owners Monchellio and her trusted Cane, Ralphillio. It all started when Monchellio and Ralphillio met at a local dog park and struck up a conversation. After finding a common love of Italian food Monchellio and Ralphillio founded Piccoli Morsi, a full service, full course Italian restaurant that caters to canines and their owners.</br></br>
-                    ​<img src="assets/restaurantphotos/handwritten-italian-marketing-menu-medium.jpg">Piccoli Morsi offers a fine dining experience featuring Iron (Yard) Chef Michael Sweenio (not to be confused with famed Front End Designer Michael Sweeney). Piccoli Morsi is located in the beautiful Arts District in downtown Las Vegas and welcomes all breeds and their owners.</br></br>
-                    Dine in comfortable Euro-style, either in our casually elegant dining room, or our beautiful outdoor beer garden, surrounded by natural landscaping with soft, twinkling lights strung through the trees, providing a subtly festive aura. Your dog will appreciate the natural surroundings, and the complementary water bowls located throughout the patio area. Relax, enjoy our 5-star Italian menu, and our special "Cane Cucina" menu with tasty treats for your 4-footed friend.</p>
-                </div>
+                    <p>Founded in 1990 in italy brought to United States in 2015.  The idea of Piccoli Morsi (Small Bites)is the creation of the owners Monchellio and Ralphillio . It all started when Monchellio and Ralphillio met at a local dog park and struck up a conversation about their dogs and how much they will enjoy spend time with them. After finding a common love for dogs and Italian food Monchellio and Ralphillio founded Piccoli Morsi, a full service, full course Italian restaurant that caters to canines and their owners.</br></br>
+                    ​<img src="assets/restaurantphotos/handwritten-italian-marketing-menu-medium.jpg">Piccoli Morsi offers a fine dining experience featuring Iron (Yard) Chef Michael Sweenio (not to be confused with famed Front End Designer Michael Sweeney). Piccoli Morsi is located in the beautiful Arts District in downtown Las Vegas and welcomes all breeds and their owners.  We are famous in Italy for pur service and special dishenes desing for canes. Using the most exquisite ingridients, working with organic foods bringing the most quality food to be delite for our customers.</br></br>
+                    Dine in comfortable Euro-style.  We have been opening the restaurant with two different atmospheres, the first one is the casual where the canes and their owners enjoy our beautiful outdoor beer garden, surrounded by natural landscaping with soft, twinkling lights strung through the trees, providing a subtly festive aura. </p><img src="assets/dogphotos/restaurantdog8.jpg">Your dog will be enjoy his food next to you and at the same time our customers can appreciate the natural surroundings, and the great servicie we are know for.  Offering complementary water bowls and home baked biscuits that are located throughout ourthe patio area. Picolli Mose it is the perfect place for relax, and enjoy our 5-star Italian menu, and our special "Cane Cucina" menu with tasty treats for your 4-footed friend..
+                    <p>Our second option is the indoor dinning that it is more elegant, it is the favorite place for our customers to celebrate the birthday parties.</p>
+
             </section>
 
             <section id="tab2" class="tab-content hide">
@@ -163,6 +162,7 @@
                 <li class="food-photo"><img class="foodPhoto" src="assets/foodphotos/dessert1.jpg"></li>
                 <li class="food-photo"><img class="foodPhoto" src="assets/foodphotos/lasagna.jpg"></li>
                 <li class="food-photo"><img class="foodPhoto" src="assets/foodphotos/wine.jpg"></li>
+
             </ul>
 
             <div id="logo">
@@ -205,6 +205,7 @@
 
 	<script type="x-tmpl-mustache" id="specialsFormTemplate">
 		<h4 class="locationBoxH4">Today&#39s Special</h4>
+        <div><img src="{{imgsrc}}"></div>
 		<p id="specialItem">{{td.item}}</p>
 		<p class="price">{{td.price}}</p><br><br>
 		<p>{{td.description}}</p>
