I don't know what this is but I'm pushing it

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 		<h4 class="locationBoxH4">Today&#39s Special</h4>
         <div><img src="{{imgsrc}}"></div>
 		<p id="specialItem">{{td.item}}</p>
-		<p class="price">{{td.price}}</p><br><br>
+		<p id="special-price">{{td.price}}</p><br><br>
 		<p>{{td.description}}</p>
 	</script>
 
