Adds final files for homework

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
             <div class="api-panel redAPI" id="special">
             </div>
             <div class="api-panel redAPI" id="map">
-                <h4 class="locationBoxH4">Our Location</h4>
-                <div><iframe class="small" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3221.335590207901!2d-115.15467894974906!3d36.15838747998808!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c8c39ab244a1cb%3A0xd0b332727ed859dc!2s1112+S+Casino+Center+Blvd%2C+Las+Vegas%2C+NV+89104!5e0!3m2!1sen!2sus!4v1446144584501" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe></div></br>
-                <p class="locationBox">10001 S. Casino Center Blvd, Las Vegas, NV 89104</p>
+                <h3 class="locationBoxH4">Our Location</h3>
+                <div><iframe class="small" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3221.335590207901!2d-115.15467894974906!3d36.15838747998808!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c8c39ab244a1cb%3A0xd0b332727ed859dc!2s1112+S+Casino+Center+Blvd%2C+Las+Vegas%2C+NV+89104!5e0!3m2!1sen!2sus!4v1446144584501" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe></div>
+                <p class="locationBox">11112 S. Casino Center Blvd, Las Vegas, NV 89104</p>
                 <p class="locationBox">555-555-1234 * 555-555-1234 * info@piccolimorsi.com</p>
             </div>
         </div>
@@ -59,10 +59,10 @@
     <!-- content in the tab menus -->
             <section id="tab1" class="tab-content active">
                 <div>
-                    <p>Founded in 1990 in italy brought to United States in 2015.  The idea of Piccoli Morsi (Small Bites)is the creation of the owners Monchellio and Ralphillio . It all started when Monchellio and Ralphillio met at a local dog park and struck up a conversation about their dogs and how much they will enjoy spend time with them. After finding a common love for dogs and Italian food Monchellio and Ralphillio founded Piccoli Morsi, a full service, full course Italian restaurant that caters to canines and their owners.</br></br>
-                    ​<img src="assets/restaurantphotos/handwritten-italian-marketing-menu-medium.jpg">Piccoli Morsi offers a fine dining experience featuring Iron (Yard) Chef Michael Sweenio (not to be confused with famed Front End Designer Michael Sweeney). Piccoli Morsi is located in the beautiful Arts District in downtown Las Vegas and welcomes all breeds and their owners.  We are famous in Italy for pur service and special dishenes desing for canes. Using the most exquisite ingridients, working with organic foods bringing the most quality food to be delite for our customers.</br></br>
-                    Dine in comfortable Euro-style.  We have been opening the restaurant with two different atmospheres, the first one is the casual where the canes and their owners enjoy our beautiful outdoor beer garden, surrounded by natural landscaping with soft, twinkling lights strung through the trees, providing a subtly festive aura. </p><img src="assets/dogphotos/restaurantdog8.jpg">Your dog can enjoy his food next to you and at the same time our customers can appreciate the natural surroundings, and the great service we are known for.  Offering complementary water bowls and home baked biscuits that are located throughout our patio area. Piccoli Morsi is the perfect place to relax, enjoy our 5-star Italian menu, and sample our special "Cane Cucina" selections--tasty treats for your 4-footed friend...
-                    <p>Our second option is the indoor dining room that it is more elegant, it is the favorite place for our customers to celebrate special occasions like birthday parties, anniversaries, or just a gathering of friends after the big game.</p>
+                    <p>Founded in 1990 in Italy brought to United States in 2015. The idea of Piccoli Morsi ("Small Bites") is the creation of the owners Monchellio and Ralphillio. It all started when Monchellio and Ralphillio met at a local dog park and struck up a conversation about their dogs and how much they enjoy spending time with them. After finding a common love for dogs and Italian food Monchellio and Ralphillio founded Piccoli Morsi, a full-service, full-course Italian restaurant that caters to canines and their owners.</br></br>
+                    ​<img src="assets/restaurantphotos/handwritten-italian-marketing-menu-medium.jpg">Piccoli Morsi offers a fine dining experience featuring Iron Yard Chef Michael Sweenio (not to be confused with famed Front End Designer Michael Sweeney). Piccoli Morsi is located in the beautiful Arts District in downtown Las Vegas and welcomes all breeds and their owners.  We are famous in Italy for our service and special dishes designed for canines. We use the most exquisite ingredients, working with organic produce, and serving the highest quality food to the delight of our customers.</br></br>
+                    Dine in comfortable Euro-style. The restaurant has two different atmospheres: the first one is casual where the canines and their owners enjoy our beautiful outdoor beer garden, surrounded by natural landscaping with soft, twinkling lights strung through the trees, providing a subtly festive aura. </p><img src="assets/dogphotos/restaurantdog8.jpg">Your dog can enjoy his food next to you and at the same time our customers can appreciate the natural surroundings, and the great service we are known for. Offering complementary water bowls and home baked biscuits that are located throughout our patio area, Piccoli Morsi is the perfect place to relax, enjoy our 5-star Italian menu, and sample our special "Cane Cucina" selections--tasty treats for your 4-footed friend.
+                    <p>Our second option is the indoor dining room that it is more elegant, and is the favorite place for our customers to celebrate special occasions like birthday parties, anniversaries, or just a gathering of friends after the big game.</p>
 
             </section>
 
@@ -158,7 +158,7 @@
         <div id="right-full-panel">
             <ul id="foods">
                 <li class="food-photo"><img class="foodPhoto" src="assets/foodphotos/appetizer.jpg"></li>
-                <li class="food-photo"><img class="foodPhoto" src="assets/foodphotos/bruschetta.jpg"></li>
+                <!--<li class="food-photo"><img class="foodPhoto" src="assets/foodphotos/bruschetta.jpg"></li>-->
                 <li class="food-photo"><img class="foodPhoto" src="assets/foodphotos/dessert1.jpg"></li>
                 <li class="food-photo"><img class="foodPhoto" src="assets/foodphotos/lasagna.jpg"></li>
                 <li class="food-photo"><img class="foodPhoto" src="assets/foodphotos/wine.jpg"></li>
@@ -186,7 +186,6 @@
 
 
 
-
 </div> <!-- END of wrapper div -->
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
@@ -194,7 +193,7 @@
 		<script src="main.js"></script>
 
 		<script type="x-tmpl-mustache" id="newsFormTemplate">
-				<h4 class="locationBoxH4">Latest News</h4>
+				<h3 class="locationBoxH4">Latest News</h3>
 				<h5 id="news-title">{{data.title}}</h5>
 				<h5 id="news-date">{{data.date_published}}</h5> </br>
 				<p id="news-post">{{data.post}}&nbsp;<a href="#">Read more...</a></p>
@@ -204,11 +203,11 @@
 
 
 	<script type="x-tmpl-mustache" id="specialsFormTemplate">
-		<h4 class="locationBoxH4">Today&#39s Special</h4>
-        <div><img src="{{imgsrc}}"></div>
+		<h3 class="locationBoxH4">Today&#39s Special</h3>
+        <div id="specialsImage"><img src="{{imgsrc}}"></div>
 		<p id="specialItem">{{td.item}}</p>
-		<p id="special-price">{{td.price}}</p><br><br>
-		<p>{{td.description}}</p>
+    <p id="special-Price">{{td.price}}</p>
+    <p class="specialDescription">{{td.description}}</p>
 	</script>
 
 	<script type="x-tmpl-mustache" id="aboutFormTemplate">
@@ -218,18 +217,18 @@
 		<p>{{data.text2}}</p>
 	</script>
 	<script type="x-tmpl-mustache" id="appetizerFormTemplate">
-	<h2 class="menu-course"><em>APPETIZERS</em></h2>
+	<h2 class="menu-course">Appetizers</h2>
 	{{#appetizers}}
 	<h4 class="item">{{item}}</h4>
 	<p class="price">{{price}}</p><br/>
 	<p class="description">{{description}}</p>
-  {{#local fav}}<span class="menu-added"><img src="assets/icons/Places-favorites-icon.png"/></span>{{/local fav}}
+  {{#local fav}}<span class="menu-added"><img id="favs" src="assets/icons/Places-favorites-icon.png"/></span>{{/local fav}}
   {{#low sodium}}<span class="menu-added"><img src="assets/icons/icon-lowsodium-bg.gif"/></span>{{/low sodium}}
   {{#under 500 cals}}<span class="menu-added"><img src="assets/icons/icon_under500cal.gif"/></span><br/>{{/under 500 cals}}
 	{{/appetizers}}
 	</script>
 	<script type="x-tmpl-mustache" id="saladFormTemplate">
-	<h2 class="menu-course"><em>SALADS</em></h2>
+	<h2 class="menu-course">Salads</h2>
 	{{#salads}}
 	<h4 class="item">{{item}}</h4>
 	<p class="price">{{price}}</p><br/>
@@ -240,7 +239,7 @@
 	{{/salads}}
 	</script>
 	<script type="x-tmpl-mustache" id="soupFormTemplate">
-  <h2 class="menu-course"><em>SOUPS</em></h2>
+  <h2 class="menu-course">Soups</h2>
 	{{#soups}}
 	<h4 class="item">{{item}}</h4>
 	<p class="soup-price">cup: <span>{{price.cup}} </span></p><p class="soup-price">bowl: <span>{{price.bowl}} </span></p><br/>
@@ -251,7 +250,7 @@
 	{{/soups}}
 	</script>
 	<script type="x-tmpl-mustache" id="mainFormTemplate">
-	<h2 class="menu-course"><em>MAINS</em></h2>
+	<h2 class="menu-course">Entrees</h2>
 	{{#mains}}
 	<h4 class="item">{{item}}</h4>
 	<p class="price">{{price}}</p><br/>
@@ -262,7 +261,7 @@
 	{{/mains}}
 	</script>
 	<script type="x-tmpl-mustache" id="drinkFormTemplate">
-  <h2 class="menu-course"><em>DRINKS</em></h2>
+  <h2 class="menu-course">Beverages</h2>
 	{{#drinks}}
 	<h4 class="item">{{item}}</h4>
 	<p class="price">{{price}}</p><br/>
@@ -273,7 +272,7 @@
 	{{/drinks}}
 	</script>
 	<script type="x-tmpl-mustache" id="dessertFormTemplate">
-	<h2 class="menu-course"><em>DESSERTS</em></h2>
+	<h2 class="menu-course">Desserts</h2>
 	{{#desserts}}
 	<h4 class="item">{{item}}</h4>
 	<p class="price">{{price}}</p><br/>
@@ -284,7 +283,7 @@
 	{{/desserts}}
 	</script>
 	<script type="x-tmpl-mustache" id="dogFormTemplate">
-	<h2 class="menu-course"><em>CANE CUCINA</em></h2>
+	<h2 class="menu-course">Cane Cucina</h2>
 	{{#CaneCucina}}
 	<h4 class="item">{{item}}</h4>
 	<p class="price">{{price}}</p><br/>
